[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["Shingo Watanabe <60470162+Last-Vega@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
torchsde = "^0.2.6"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
einops = "^0.8.0"
transformers = ">=4.28.1"
tokenizers = ">=0.13.3"
sentencepiece = "^0.2.0"
safetensors = ">=0.4.2"
aiohttp = "^3.9.5"
pyyaml = "^6.0.1"
pillow = "^10.4.0"
scipy = "^1.14.0"
tqdm = "^4.66.4"
psutil = "^6.0.0"
kornia = ">=0.7.1"
spandrel = "^0.3.4"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
